--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,4 +19,4 @@ jobs:
       uses: docker/build-push-action@v3.1.0
       with:
         push: true
-        tags: ghcr.io/${{ github.repository }}:${{ env.GITHUB_REF }}
+        tags: ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }}
